--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       dockerfile: Dockerfile
       context: ./nginx
     ports:
-      - 3000:80
+      - "3000:80"
 
   backend:
     build:
@@ -25,6 +25,12 @@ services:
     volumes:
       - /app/node_modules
       - ./backend:/app
+    environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: johnahn
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306
 
   mysql:
     build: ./mysql
@@ -36,5 +42,5 @@ services:
       - ./mysql/mysql_data:/var/lib/mysql
       - ./mysql/sqls/:/docker-entrypoint-initdb.d/
     environment:
-      MYSQL_ROOT_PASSWORD: lee
+      MYSQL_ROOT_PASSWORD: johnahn
       MYSQL_DATABASE: myapp
