--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY ./package.json ./
 RUN npm install
 COPY . .
-RUN chown -Rh $user:$user /app
+RUN chown -R $user:$user /app
 USER $user
 
 RUN npm run build
