--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -10,7 +10,7 @@ RUN npm install
 
 COPY ./ ./
 
-RUN chown -R $user:$user /app
-USER $user
+RUN chown -R node /app
+USER node
 
 CMD [ "npm", "run", "start" ]
