--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -11,8 +11,8 @@ RUN npm install
 
 COPY . .
 
-RUN chown -R $user:$user /app
-USER $user
+RUN chown -R node /app
+USER node
 
 
 CMD ["npm", "run", "dev"]
