--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     build: ./mysql
     restart: unless-stopped
     container_name: app_mysql
-    exporse:
+    expose:
       - "3306"
     ports:
       - "3306:3306"
