--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,9 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./mysql/mysql_data:/var/lib/mysql
       - ./mysql/sqls/:/docker-entrypoint-initdb.d/
+      #- ./mysql/mysql_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: johnahn
-      MYSQL_DATABASE: myapp
-      MYSQL_USER: root
       MYSQL_PASSWORD: johnahn
       MYSQL_ROOT_HOST: "%"
