travis ci deploy added

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,16 @@ atter_success:
   - docker push yds5539/docker-frontend
   - docker push yds5539/docker-backend
   - docker push yds5539/docker-nginx
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-fullstack-app"
+  env: "Dockerfullstackapp-env"
+  bucket_name: elasticbeanstalk-ap-northeast-2-128248854614
+  bucket_path: "docker-fullstack-app"
+  on:
+    branch: main
+
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
